tests: change the implementation of 'The menu' test suit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
 
         <link rel="stylesheet" href="jasmine/lib/jasmine-2.1.2/jasmine.css">
-
+        <script src="jquery-3.3.1.min.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
         <script src="jasmine/lib/jasmine-2.1.2/boot.js"></script>
